# Interstellar

./: .envrc  .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  build.gradle  build.gradle.kts  fetch_latest.sh  gradle.properties  run.sh  settings.gradle  settings.gradle.kts
.github/workflows/: build.yml
common/: build.gradle  build.gradle.kts
common/src/main/java/dev/niostone/interstellar/: Interstellar.java  ModExpectPlatform.java
common/src/main/java/net/minecraft/resources/: ResourceLocation.java
common/src/main/kotlin/org/stardustmodding/: package-info.java
common/src/main/kotlin/org/stardustmodding/ionengine/: IonEngine.kt  package-info.java
common/src/main/kotlin/org/stardustmodding/quantumengine/: QuantumEngine.kt  package-info.java
common/src/main/resources/: architectury.common.json  dynamicdimensions.mixins.json  interstellar-common.mixins.json  interstellar.accesswidener  pack.mcmeta
doclet/: build.gradle.kts
doclet/remappedSrc/org/stardustmodding/docs/taglet/: MappingTaglet.java
doclet/src/main/resources/: copy_on_click.js  javadoc_header.txt  style.css
docs/progression/: .$EarthToMoon.drawio.bkp  EarthToMoon.drawio
dokka/: build.gradle.kts
dokka/src/main/resources/static_res/: stylesheet.css
dokka/src/main/resources/views/components/: head.korte
fabric/: build.gradle  build.gradle.kts
fabric/src/main/resources/: fabric.mod.json  interstellar.mixins.json
forge/: build.gradle  build.gradle.kts
forge/src/main/resources/: interstellar.mixins.json  pack.mcmeta
helpers/javadoc/: fetch.py
(+259 files in other folders)
